fix: bot name and only real catalog etc

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MIA - Asistente Veterinaria | MundoMascotix</title>
-  <meta name="description" content="MIA, tu asistente veterinaria en MundoMascotix. Te asesoramos sobre nutrición, antiparasitarios, higiene y cuidados para tu mascota." />
+  <title>MIA - Asistente Veterinario | MundoMascotix</title>
+  <meta name="description" content="MIA, tu asistente veterinario en MundoMascotix. Te asesoramos sobre nutrición, antiparasitarios, higiene y cuidados para tu mascota." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
